Revise rules and improve HTML structure
Updated rules and fixed formatting issues.

--- a/frontend/rules.html
+++ b/frontend/rules.html
@@ -64,10 +64,10 @@ body {
       <li>3. No using skiddie JavaScripts. (Even though Inspect Element is disabled).</li>
       <li>4. No leaking IPs (Only The Owner and The Kings can)</li>
       <li>5. No posting illegal material like CP and Animal Abuse, etc.</li>
-      <li>9. No pissing Owner/King off</li>
-      <li>10. No Objectfags.</li>
-      <li>12. No Logofags.</li>
-      <li>13. No Windowsfags.</li>
+      <li>9. No pissing Nazar and King off</li>
+      <li>10. No Objectfags content.</li>
+      <li>12. No Logofags content.</li>
+      <li>13. No NSFW Content.</li>
       <li>14. No Gofags.</li>
       <li>15. No spying. (For example spying on what other people say shit about you and then leaking this on your discord gc.</li>
       <li>16. No Spamming.</li>
@@ -85,4 +85,5 @@ body {
 		<div id="close"></div>
 	</div>
 </body>
+
 </html>
