--- a/frontend/readme.html
+++ b/frontend/readme.html
@@ -120,8 +120,8 @@ body {
               <li>think</li>
           </ul>
       </li>
-      <li>/joke - Tell Zachary's bad jokes.</li>
-      <li>/fact - Tell an interesting fact.</li>
+      <li>/joke - Tell Nazar's jokes.</li>
+      <li>/fact - Tell an Amazing fact.</li>
       <li>/youtube [link] - Send a youtube video</li>
       <li>/video [link] - Send a video/audio from a video/audio url/link</li>
       <li>/image [link] - Send an image from an image url/link</li>
@@ -141,7 +141,6 @@ body {
       <li>/kingmode [password] - Get king privileges. This command gets saved into your cookies so you don't have to manually run it everytime you join a room.</li>
       <li>/sanitize - You can do some TTS glitches even the [[ZZZZZZZZZZZZZZZZZZZ one.</li>
       <li>/smute [user ID] - (Un)mutes the targeted user.</li>
-      <li>DISREGARD THAT COMMAND LOL.</li>
       <li>/deporn [user ID] - Blacklists the targeted user's crosscolor; also changes their name to "I love men" and their color to "jew".</li>
       <li>/kick [user ID] - Kicks the targeted user out of the room.</li>
     </ul>
@@ -174,14 +173,29 @@ body {
         and more stuff.
     </ul>
 
+	<h2>What can Nazar the owner of peedyworld recreaters do?</h2>
+    <ul>
+        <li>Update peedyworld</li>
+        <li>Use fun HTML scripts with /sanitize off</li>
+        <li>Make announcements</li>
+        <li>Make polls</li>
+        <li>ban and kick people</li>
+        and more stuff.
+    </ul>
+
     <h2>Who made this?</h2>
-    PeedyWORLD was originally made by DanielTR but then PeedyWORLD got shutdown in 2019/2020, and after 5/4 years, ZacharyTheGod came here to redesign the whole server and make it more fun.
+    PeedyWORLD was recreated by nazar
   
     <h2>Special Thanks to</h2>
     <ul>
-      <li>Fune (owner of BonziWORLD.org)</li>
-      <li>ZacharyTheGod (owner of PeedyWORLD)<\li>
-      <li>Mailbox AUTTP (For some colors)<\li>
+      <li>AUTTP</li>
+      <li>Nazar (owner of PeedyWORLD recreations)</li>
+      <li>Luca</li>
+  	  <li>MTV Dance</li>
+  	  <li>Swag FRENZY (Owner of BW.net)</li>
+	  <li>MTV Dance</li>
+	  <li>Secret Staycation AUTTP</li>
+	  <li>Donatina (he made prollworld.org)</li>
     </ul>
 	<div id="titlebar">
 		<div id="minimize"></div>
@@ -189,4 +203,5 @@ body {
 		<div id="close"></div>
 	</div>
 </body>
+
 </html>
